--- a/CSS/nav.css
+++ b/CSS/nav.css
@@ -1,13 +1,3 @@
-.container {
-	display:flex;
-	flex-direction: column;
-	margin-left:5vw;
-	margin-right:5vw;
-	background-color: transparent;
-	height:100vh;
-	align-content:stretch
-}
-
 nav {
 	padding-top: 8px;
 	height:10%;
@@ -20,7 +10,7 @@ nav {
 }
 
 nav i {
-	color:#493A37;
+	color: transparent;
 	font-size: 70px;
 }
 
@@ -40,7 +30,15 @@ nav ul li a {
 	color:#493A37;
 }
 
+/* nav ul li a:hover {
+	color: white;
+	background: #A8B7AB;	
+} */
+
 nav ul li a:hover {
 	color: white;
-	background: #314226;	
+	background: #A8B7AB; 
+  -webkit-transition: background 0.3s ease-in-out;
+  -moz-transition: background 0.3s ease-in-out;
+  transition: background-color 0.3s ease-in-out;
 }
